# ha-safe-export

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  CLAUDE.md  Claude.md  DATASET.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/skills/fix-markdown/: SKILL.md
.claude/skills/fix-markdown/scripts/: align_tables.py
.claude/skills/work-issue/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: DATASET.md  DECISIONS.md  ENERGY_ANALYSIS.md  PHASE_1_SCHEMA_UPDATE.md  SPEC.md
docs/analysis/: ENERGY_ANALYSIS.md  LIVE_INTEGRATION.md
src/: config.py  extract.py  model.py  schema.sql  windows.py
src/migrations/: 001_add_weather_forecast.sql  002_add_humidity.sql  003_add_data_gap.sql  004_add_afternoon_temp.sql  005_add_evening_grid_export.sql  006_add_forecast_inputs.sql
tests/: conftest.py  fixtures.py  test_backtest.py  test_config.py  test_extract.py  test_extract_synthetic.py  test_flow_parity.py  test_model.py  test_sync.py  test_windows.py
tools/: backtest.py  nodered-flow.json  predictor.html  retrain.py
