[project]
name = "ha-safe-export"
version = "1.3.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Dev/analysis only — not required by the runtime predictor. Used by tools/retrain.py.
tools = [
    "numpy>=1.26",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
