[project]
name = "ha-safe-export"
# Version is sourced from src/__init__.py (__version__) — one place to bump.
# Convention: the project version tracks the dataset schema version, and
# __version__ must be bumped in the same commit as any behavioural change to
# extraction or model logic (it is stamped into extraction_version on every row).
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Dev/analysis only — not required by the runtime predictor. Used by tools/retrain.py.
tools = [
    "numpy>=2.4.6",
]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# backtest.py embeds HTML/f-string template fragments where wrapping hurts
# readability more than long lines do. E501 only; all other rules still apply.
"tools/backtest.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
mypy_path = "."
files = ["src"]
ignore_missing_imports = true
